# fastapi-categorise-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  poetry.lock.orig  poetry.toml  pyproject.toml
database_handle/: database.py
database_handle/jobs/: listen_to_minio.py
database_handle/models/: audios.py  bindings.py  categories.py  dashboard.py  exports.py  exports_categories.py  pagination.py  texts.py
database_handle/queries/: audios.py  bindings.py  categories.py  dashboard.py  exports.py  texts.py
database_handle/utils/: pagination.py
models/: finalise.py
routes/: audios.py  bindings.py  categories.py  dashboard.py  finalize.py  texts.py
routes/finalize/: classes.py  constants.py  routes.py  utils.py
routes/schemas/: main.py
services/: minio_service.py
