[tool.poetry]
name = "main.py"
version = "0.1.0"
description = ""
authors = ["Herob"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.1"
sqlalchemy = "^2.0.7"
uvicorn = "^0.38.0"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.9"
pydantic = "^2.7.1"
librosa = "^0.11.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.9"}
minio = "^7.2.15"
