[project]
name = "main.py"
version = "0.1.0"
description = ""
authors = [{ name = "Herob" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "fastapi>=0.121.1,<0.122",
    "sqlalchemy>=2.0.7,<3",
    "uvicorn>=0.38.0,<0.39",
    "aiosqlite>=0.20.0,<0.21",
    "python-multipart>=0.0.20,<0.0.21",
    "pydantic>=2.7.1,<3",
    "librosa>=0.11.0,<0.12",
    "psycopg[binary, pool]>=3.2.9,<4",
    "minio>=7.2.15,<8",
]

[tool.uv]
package = false
