[project]
name = "main.py"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4"
authors = [{ name = "Herob" }]
dependencies = [
  "aiosqlite>=0.20.0,<0.21",
  "fastapi>=0.121.1,<0.122",
  "librosa>=0.11.0,<0.12",
  "minio>=7.2.15,<8",
  "psycopg[binary, pool]>=3.2.9,<4",
  "pydantic>=2.7.1,<3",
  "python-multipart>=0.0.20,<0.0.21",
  "sqlalchemy>=2.0.7,<3",
  "uvicorn>=0.38.0,<0.39",
]

[tool.uv]
package = false
